# brik-pipe-examples

./: .gitignore  LICENSE  README.md  docker-compose.selenium.yml  package-lock.json  package.json
.github/: CODEOWNERS  policy
.governance/: tests.yml
config/: bb.api.yaml  bb.ui.yaml
configs/: bb.ingest.yaml  bb.invalid.yaml  bb.unit.yaml
dotnet-api-example/: .env.integration.example  Dockerfile  Makefile  brikpipe.build.yml  docker-compose.integration.yml  dotnet-api-example.sln
go-api-example/: .dockerignore  .env.integ.example  Dockerfile  Makefile  brikpipe.build.yml  docker-compose.integration.yml  go.mod  health_handler.go  health_handler_test.go  integration_integration_test.go  integration_test.go  main.go  main_test.go  payments_handler.go  payments_handler_test.go  root_handler.go  root_handler_test.go
java-api-example/: Dockerfile  Makefile  brikpipe.build.yml  docker-compose.integration.yml  pom.xml
java-selenium-example/: README.md
java-selenium-runner-example/: README.md  pom.xml
node-api-example/: Dockerfile  Makefile  brikpipe.build.yml  eslint.config.js  (+4 more)
python-selenium-runner-example/: .env.example  README.md  conftest.py  pyproject.toml
python-selenium-runner-example/e2e/: test_smoke_e2e.py
python-selenium-runner-example/scripts/: seed-test-users.py
python-selenium-runner-example/src/brikbyte_e2e/config/: env.py
python-selenium-runner-example/src/brikbyte_e2e/tests/: test_homepage_smoke.py
python-selenium-runner-example/src/brikbyte_e2e/util/: waits.py
python-selenium-runner-example/tests/e2e/fixtures/: test_accounts.py
(+190 files in other folders)
